--- a/DnDCharCtor/DnDCharCtor.Pwa/DnDCharCtor.Pwa.csproj
+++ b/DnDCharCtor/DnDCharCtor.Pwa/DnDCharCtor.Pwa.csproj
@@ -13,7 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DnDCharCtor.Shared\DnDCharCtor.Shared.csproj" />
+    <ProjectReference Include="..\DnDCharCtor.Ui\DnDCharCtor.Ui.csproj" />
   </ItemGroup>
 
   <ItemGroup>
