--- a/DnDCharCtor/DnDCharCtor.Ui/DnDCharCtor.Ui.csproj
+++ b/DnDCharCtor/DnDCharCtor.Ui/DnDCharCtor.Ui.csproj
@@ -12,8 +12,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
-    <PackageReference Include="Microsoft.Fast.Components.FluentUI" Version="3.8.0" />
-    <PackageReference Include="Microsoft.Fast.Components.FluentUI.Icons" Version="3.8.0" />
+    <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.10.4" />
+    <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Emoji" Version="4.6.0" />
+    <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Icons" Version="4.10.4" />
     <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
