--- a/DnDCharCtor.Common/DnDCharCtor.Common.csproj
+++ b/DnDCharCtor.Common/DnDCharCtor.Common.csproj
@@ -10,4 +10,19 @@
     <ProjectReference Include="..\DnDCharCtor.Models\DnDCharCtor.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Update="Resources\StringResources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>StringResources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Resources\StringResources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>StringResources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
