WIP: Localization in WebAssembly is pain;

--- a/DnDCharCtor/DnDCharCtor.Maui/DnDCharCtor.Maui.csproj
+++ b/DnDCharCtor/DnDCharCtor.Maui/DnDCharCtor.Maui.csproj
@@ -21,6 +21,8 @@
     <EnableDefaultCssItems>false</EnableDefaultCssItems>
     <Nullable>enable</Nullable>
 
+	<BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
+
     <!-- Display name -->
     <ApplicationTitle>DnDCharCtor</ApplicationTitle>
 
