WIP: I'm still unable to find a way to tell WASM to eager load all language resources (which would be neccesary to support Offline PWA);

--- a/DnDCharCtor/DnDCharCtor.Maui/DnDCharCtor.Maui.csproj
+++ b/DnDCharCtor/DnDCharCtor.Maui/DnDCharCtor.Maui.csproj
@@ -22,6 +22,7 @@
     <Nullable>enable</Nullable>
 
 	<BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
+	<MonoLinkerI18NAssemblies>all</MonoLinkerI18NAssemblies>
 
     <!-- Display name -->
     <ApplicationTitle>DnDCharCtor</ApplicationTitle>
