--- a/DnDCharCtor.Common/DnDCharCtor.Common.csproj
+++ b/DnDCharCtor.Common/DnDCharCtor.Common.csproj
@@ -24,10 +24,10 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Resources\StringResources.de-DE.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
+      <Generator></Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Resources\StringResources.en-US.resx">
-      <Generator>PublicResXFileCodeGenerator</Generator>
+      <Generator></Generator>
     </EmbeddedResource>
     <EmbeddedResource Update="Resources\StringResources.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
