--- a/DnDCharCtor/DnDCharCtor.Pwa/DnDCharCtor.Pwa.csproj
+++ b/DnDCharCtor/DnDCharCtor.Pwa/DnDCharCtor.Pwa.csproj
@@ -10,6 +10,11 @@
 	<PropertyGroup>
 		<BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
 		<MonoLinkerI18NAssemblies>all</MonoLinkerI18NAssemblies>
+		
+		<!--https://github.com/dotnet/aspnetcore/issues/50361#issuecomment-1699512477-->
+		<!--https://github.com/dotnet/runtime/issues/98415#issuecomment-1945859860-->
+		<!--Unfortunally, we need unsafe code for "JSImport"-->
+		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	</PropertyGroup>
 
   <ItemGroup>
