WIP: Create New Projects for `Resources` and `Validation`;

--- a/DnDCharCtor.Models/DnDCharCtor.Models.csproj
+++ b/DnDCharCtor.Models/DnDCharCtor.Models.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DnDCharCtor.Validation\DnDCharCtor.Validation.csproj" />
+  </ItemGroup>
+
 </Project>
