--- a/DnDCharCtor.ViewModels/DnDCharCtor.ViewModels.csproj
+++ b/DnDCharCtor.ViewModels/DnDCharCtor.ViewModels.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
+    <PackageReference Include="Prism.Core" Version="9.0.537" />
   </ItemGroup>
 
   <ItemGroup>
