--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -1,6 +1,7 @@
 # This workflow will build a .NET project
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-net
 # https://swimburger.net/blog/dotnet/how-to-deploy-aspnet-blazor-webassembly-to-github-pages
+# https://github.com/TenaciousDev/BlazorGitHubPagesDemo
 name: Deploy to GitHub Pages
 
 # Run workflow on every push to the master branch
@@ -26,11 +27,24 @@ jobs:
     - name: Test
       run: dotnet test --no-build --verbosity normal
     # publishes Blazor project to the release-folder
-    - name: Publish .NET Core Project
-      run: dotnet publish BlazorGitHubPagesDemo.csproj -c Release -o release --nologo
+    - name: Publish .NET Project
+      run: dotnet publish DnDCharCtor.Pwa.csproj -c Release -o release --nologo
+    # changes the base-tag in index.html from '/' to 'BlazorGitHubPagesDemo' to match GitHub Pages repository subdirectory
+    - name: Change base-tag in index.html from / to DnDCharCtor.Pwa
+      run: sed -i 's/<base href="\/" \/>/<base href="\/DnDCharCtor.Pwa\/" \/>/g' release/wwwroot/index.html
+      # copy index.html to 404.html to serve the same file when a file is not found
+    - name: copy index.html to 404.html
+      run: cp release/wwwroot/index.html release/wwwroot/404.html
+      # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
+    - name: Add .nojekyll file
+      run: touch release/wwwroot/.nojekyll
+    # publishes wwwroot directory to GitHub Pages
     - name: Commit wwwroot to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@4
+      uses: JamesIves/github-pages-deploy-action@4.1.5
       with:
+        token: ${{ secrets.GITHUB_TOKEN }}
+        branch: gh-pages # The branch the action should deploy to.
+        folder: release/wwwroot # The folder the action should deploy.
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         BRANCH: gh-pages
         FOLDER: release/wwwroot
