Fix Workloads in github_pages.yml

--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -20,8 +20,12 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x
+    - name: Install MAUI Workload 
+      run: dotnet workload install maui --ignore-failed-sources
     - name: Restore dependencies
       run: dotnet restore
+    - name: Restore Workload
+      run: dotnet workload restore
     - name: Build
       run: dotnet build --no-restore
     - name: Test
