--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -20,16 +20,16 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.x
-    - name: Install MAUI Workload 
-      run: dotnet workload install maui --ignore-failed-sources
+    #- name: Install MAUI Workload 
+    #  run: dotnet workload install maui --ignore-failed-sources
     - name: Restore dependencies
       run: dotnet restore
     - name: Restore Workload
       run: dotnet workload restore
     - name: Build
-      run: dotnet build --no-restore
-    - name: Test
-      run: dotnet test --no-build --verbosity normal
+      run: dotnet build DnDCharCtor.Pwa.csproj --no-restore
+    #- name: Test
+    #  run: dotnet test --no-build --verbosity normal
     # publishes Blazor project to the release-folder
     - name: Publish .NET Project
       run: dotnet publish DnDCharCtor.Pwa.csproj -c Release -o release --nologo
