--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -23,9 +23,9 @@ jobs:
     #- name: Install MAUI Workload 
     #  run: dotnet workload install maui --ignore-failed-sources
     - name: Restore dependencies
-      run: dotnet restore
+      run: dotnet restore DnDCharCtor.Pwa.csproj
     - name: Restore Workload
-      run: dotnet workload restore
+      run: dotnet workload restore DnDCharCtor.Pwa.csproj
     - name: Build
       run: dotnet build DnDCharCtor.Pwa.csproj --no-restore
     #- name: Test
