--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -13,6 +13,8 @@ jobs:
   deploy-to-github-pages:
     # use ubuntu-latest image to run steps on
     runs-on: ubuntu-latest
+    env:
+      PROJECT_PATH: "DnDCharCtor/DnDCharCtor.Pwa/DnDCharCtor.Pwa.csproj"
     steps:
     - name: Checkout
       uses: actions/checkout@v4
@@ -23,16 +25,16 @@ jobs:
     #- name: Install MAUI Workload 
     #  run: dotnet workload install maui --ignore-failed-sources
     - name: Restore dependencies
-      run: dotnet restore "DnDCharCtor/DnDCharCtor.Pwa/DnDCharCtor.Pwa.csproj"
+      run: dotnet restore ${{ env.PROJECT_PATH }}
     - name: Restore Workload
-      run: dotnet workload restore "DnDCharCtor/DnDCharCtor.Pwa/DnDCharCtor.Pwa.csproj"
+      run: dotnet workload restore ${{ env.PROJECT_PATH }}
     - name: Build
-      run: dotnet build "DnDCharCtor/DnDCharCtor.Pwa/DnDCharCtor.Pwa.csproj" --no-restore
+      run: dotnet build ${{ env.PROJECT_PATH }} --no-restore
     #- name: Test
     #  run: dotnet test --no-build --verbosity normal
     # publishes Blazor project to the release-folder
     - name: Publish .NET Project
-      run: dotnet publish "DnDCharCtor/DnDCharCtor.Pwa/DnDCharCtor.Pwa.csproj" -c Release -o release --nologo
+      run: dotnet publish ${{ env.PROJECT_PATH }} -c Release -o release --nologo
     # changes the base-tag in index.html from '/' to 'DnDCharCtor.Pwa' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to DnDCharCtor.Pwa
       run: sed -i 's/<base href="\/" \/>/<base href="\/DnDCharCtor.Pwa\/" \/>/g' release/wwwroot/index.html
