--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -37,7 +37,7 @@ jobs:
       run: dotnet publish ${{ env.PROJECT_PATH }} -c Release -o release --nologo
     # changes the base-tag in index.html from '/' to 'DnDCharCtor.Pwa' to match GitHub Pages repository subdirectory
     - name: Change base-tag in index.html from / to DnDCharCtor.Pwa
-      run: sed -i 's/<base href="\/" \/>/<base href="\/DnDCharCtor.Pwa\/" \/>/g' release/wwwroot/index.html
+      run: sed -i 's/<base href="\/" \/>/<base href="\/DnDCharCtor\/" \/>/g' release/wwwroot/index.html
       # copy index.html to 404.html to serve the same file when a file is not found
     - name: copy index.html to 404.html
       run: cp release/wwwroot/index.html release/wwwroot/404.html
