Fix: `-o:` in github_pages.yml
`dotnet -o:` should have been `publish` instead of `release` since `publish_dir` was changed to `publish` (prior `release`)

--- a/.github/workflows/github_pages.yml
+++ b/.github/workflows/github_pages.yml
@@ -40,7 +40,7 @@ jobs:
 
     # Publish
     - name: Publish .NET Project
-      run: dotnet publish ${{ env.PROJECT_PATH }} -c Release -o release -p:GHPages=true --nologo
+      run: dotnet publish ${{ env.PROJECT_PATH }} -c:Release -o:publsh -p:GHPages=true --nologo
    
     # Deploy the site
     - name: Deploy
