--- a/DnDCharCtor.Common/DnDCharCtor.Common.csproj
+++ b/DnDCharCtor.Common/DnDCharCtor.Common.csproj
@@ -8,6 +8,9 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="9.0.0" />
+	<!--Do NOT include Microsoft.AspNetCore.WebUtilities since it does NOT work with Maui-->
+	<!--We wanted the QueryHelpers from WebUtils but they do NOT work with MAUI so we copied the QueryHelpers from WebUtils in our project-->
+    <PackageReference Include="Microsoft.Extensions.Primitives" Version="9.0.0" />
     <PackageReference Include="Prism.Core" Version="9.0.537" />
   </ItemGroup>
 
