--- a/DnDCharCtor/DnDCharCtor.Ui/DnDCharCtor.Ui.csproj
+++ b/DnDCharCtor/DnDCharCtor.Ui/DnDCharCtor.Ui.csproj
@@ -17,6 +17,8 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="9.0.0" />
+	<!--Do NOT include Microsoft.AspNetCore.WebUtilities since it does NOT work with Maui-->
+    <!--<PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="9.0.0" />-->
     <PackageReference Include="Microsoft.Extensions.Localization" Version="9.0.0" />
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components" Version="4.10.4" />
     <PackageReference Include="Microsoft.FluentUI.AspNetCore.Components.Emoji" Version="4.6.0" />
