--- a/DnDCharCtor/DnDCharCtor.Maui/DnDCharCtor.Maui.csproj
+++ b/DnDCharCtor/DnDCharCtor.Maui/DnDCharCtor.Maui.csproj
@@ -67,6 +67,7 @@
     <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebView.Maui" Version="9.0.10" />
     <PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="9.0.0" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.9.172" />
     <PackageReference Include="System.Text.Json" Version="9.0.0" />
   </ItemGroup>
 
