--- a/DnDCharCtor/DnDCharCtor.Pwa/DnDCharCtor.Pwa.csproj
+++ b/DnDCharCtor/DnDCharCtor.Pwa/DnDCharCtor.Pwa.csproj
@@ -7,6 +7,10 @@
 	<PropertyGroup>
 		<BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
 		<MonoLinkerI18NAssemblies>all</MonoLinkerI18NAssemblies>
+		<!--https://stackoverflow.com/questions/826777/how-to-have-an-auto-incrementing-version-number-visual-studio-->
+		<AssemblyVersion>0.1.*</AssemblyVersion>
+		<!--https://stackoverflow.com/questions/53782085/assemblyversion-using-fails-with-error-wildcards-which-are-not-compatible-wi/58101474#58101474-->
+		<Deterministic>false</Deterministic>
 		
 		<!--https://github.com/dotnet/aspnetcore/issues/50361#issuecomment-1699512477-->
 		<!--https://github.com/dotnet/runtime/issues/98415#issuecomment-1945859860-->
