--- a/DnDCharCtor/DnDCharCtor.Ui/DnDCharCtor.Ui.csproj
+++ b/DnDCharCtor/DnDCharCtor.Ui/DnDCharCtor.Ui.csproj
@@ -3,6 +3,10 @@
 	<PropertyGroup>
 		<BlazorWebAssemblyLoadAllGlobalizationData>true</BlazorWebAssemblyLoadAllGlobalizationData>
 		<MonoLinkerI18NAssemblies>all</MonoLinkerI18NAssemblies>
+		<!--https://stackoverflow.com/questions/826777/how-to-have-an-auto-incrementing-version-number-visual-studio-->
+		<AssemblyVersion>0.1.*</AssemblyVersion>
+		<!--https://stackoverflow.com/questions/53782085/assemblyversion-using-fails-with-error-wildcards-which-are-not-compatible-wi/58101474#58101474-->
+		<Deterministic>false</Deterministic>
 	</PropertyGroup>
 
   <ItemGroup>
