--- a/DnDCharCtor/DnDCharCtor.Pwa/DnDCharCtor.Pwa.csproj
+++ b/DnDCharCtor/DnDCharCtor.Pwa/DnDCharCtor.Pwa.csproj
@@ -26,6 +26,7 @@
 	<!--https://stackoverflow.com/questions/75415086/unable-to-load-shared-library-libskiasharp-or-one-of-its-dependencies-on-linux-->
 	<!--We need this package since we build/deploy on a Linux-Server-->
     <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" Version="3.116.1" />
+    <PackageReference Include="SkiaSharp.NativeAssets.WebAssembly" Version="3.116.1" />
 	<!--https://learn.microsoft.com/en-us/aspnet/core/blazor/webassembly-native-dependencies?view=aspnetcore-9.0#skiasharp-example-library-use-->
     <PackageReference Include="SkiaSharp.Views.Blazor" Version="3.116.1" />
     <PackageReference Include="System.Text.Json" Version="9.0.0" />
