--- a/DnDCharCtor/DnDCharCtor.Maui/DnDCharCtor.Maui.csproj
+++ b/DnDCharCtor/DnDCharCtor.Maui/DnDCharCtor.Maui.csproj
@@ -25,6 +25,8 @@
 	<AssemblyVersion>0.2.*</AssemblyVersion>
 	<!--https://stackoverflow.com/questions/53782085/assemblyversion-using-fails-with-error-wildcards-which-are-not-compatible-wi/58101474#58101474-->
 	<Deterministic>false</Deterministic>
+	 <!--The specified version string '0.x.*' does not conform to the recommended format - major.minor.build.revision-->
+	 <NoWarn>$(NoWarn);7035</NoWarn>
 
     <!-- Display name -->
     <ApplicationTitle>DnDCharCtor</ApplicationTitle>
